history modal overflow issue fix.

--- a/Modules/BetterCms.Module.Pages/Content/Css/bcms.page.css
+++ b/Modules/BetterCms.Module.Pages/Content/Css/bcms.page.css
@@ -367,7 +367,6 @@ hr.bcms-settings-separator {
 .bcms-history-preview {
     width: 100%;
     height: 100%;
-    overflow: auto;
 }
 
 .bcms-history-info {
